# DGB-Quantum-Wallet-Guard

./: CHANGELOG.md  CONTRIBUTING.md  QWG-Adaptive-Core-Integration-v2.md  QWG-CodeBlueprint-v2.md  QWG-DeveloperGuide-v2.md  QWG-QuantumAttackScenario-1.md  QWG-TechSpec-v2.md  QWG_Whitepaper_v2.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  shield-v4-real-oqs.yml
docs/qwg/: QWG_V2.md  README.md
docs/qwg/v2/: QWG-TechSpec-v2.md  (+4 more)
examples/: adaptive_core_bridge_example.py  basic_usage.py  behaviour_and_device.py  dormant_key_sweep_scenario.py  high_risk_scenario.py
src/qwg/: __init__.py  adapters.py  adaptive_bridge.py  decisions.py  engine.py  policies.py  risk_context.py
tests/: test_adaptive_bridge.py  test_context_hash.py  test_decisions.py  test_dormant_key_sweep.py  test_engine.py  test_engine_v3_paths.py  test_engine_v3_wrapper.py  test_packaging_import.py  test_policies.py  test_reason_id_stability.py  test_v3_2_manifest_verdict_lock.py  test_v3_context_hash_type_guard.py  test_v3_full_coverage_lock.py  test_v3_verdict.py  test_v48g_real_oqs_mldsa_backend.py  test_v48h_e_oqs_falcon_backend.py  test_v48h_e_real_oqs_falcon_backend.py  test_v48h_fn_dsa_optional_evidence.py  test_v48h_fn_dsa_signed_message_kat.py  test_v49i1_repository_hygiene_lock.py  test_v4_component_kat_vectors.py  test_v4_context_hash_signature_binding.py  test_v4_crypto_verdict_contract.py  test_v4_missing_signature_fail_closed.py  test_v4_oqs_mldsa_backend.py  test_v4_real_crypto_backend_contract.py  test_v4_signature_tamper_fail_closed.py
(+21 files in other folders)
